--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "@testing-library/cypress": "^9.0.0",
     "cypress": "^12.8.1"
+  },
+  "dependencies": {
+    "eslint": "^8.36.0",
+    "prettier": "^2.8.4"
   }
 }
