--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+      - name: Install node
+        uses: actions/setup-node@v2
+        with:
+          node:version: '19.8.1'
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
