--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install node
         uses: actions/setup-node@v2
         with:
-          node:version: '19.8.1'
+          node-version: '19.8.1'
       - name: Install dependencies
         run: npm install
       - name: Cypress run
